# zksync-os

./: Cargo.toml
.github/: typos.toml
.github/workflows/: bench.yml  ci.yml  evm_terster_proof_run.yml
api/: Cargo.toml
api/src/: helpers.rs  lib.rs
basic_bootloader/: Cargo.toml
basic_bootloader/src/: lib.rs
basic_bootloader/src/bootloader/: constants.rs  errors.rs  mod.rs  process_transaction.rs  run_single_interaction.rs  runner.rs
basic_system/: Cargo.toml
basic_system/src/system_functions/: bn254_pairing_check.rs  ecrecover.rs  mod.rs
callable_oracles/: Cargo.toml
callable_oracles/src/: lib.rs
callable_oracles/src/arithmetic/: mod.rs
callable_oracles/src/field_hints/: impls.rs  mod.rs
callable_oracles/src/hash_to_prime/: evaluate.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/src/bigint_delegation/: u256.rs  u512.rs
crypto/src/bls12_381/: mod.rs
crypto/src/secp256k1/: mod.rs
crypto/src/secp256r1/: mod.rs
crypto/src/sha3/: mod.rs
docs/: README.md  da_commitment_schemes.md  l1_integration.md  proving_ethereum.md  running_tests.md
docs/bootloader/: bootloader.md  transaction_format.md
docs/system/io/: oracles.md
evm_interpreter/: Cargo.toml
evm_interpreter/src/: interpreter.rs  lib.rs  utils.rs
evm_interpreter/src/instructions/: environment.rs  host.rs
forward_system/: Cargo.toml
forward_system/src/: lib.rs
forward_system/src/run/: convert.rs  interface_impl.rs  mod.rs  oracle.rs  result_keeper.rs  tracing_impl.rs  validator_impl.rs
forward_system/src/system/: bootloader.rs  system.rs
oracle_provider/src/: lib.rs
proof_running_system/: Cargo.toml
proof_running_system/src/io_oracle/: mod.rs
proof_running_system/src/system/: bootloader.rs  mod.rs
storage_models/src/common_structs/: generic_transient_storage.rs
supporting_crates/solidity_abi_derive/src/: simple_func_selector.rs
system_hooks/src/: contract_deployer.rs  l1_messenger.rs  l2_base_token.rs  mock_precompiles.rs
tests/binary_checker/src/: lib.rs
tests/evm_tester/: Cargo.toml
tests/evm_tester/src/: lib.rs
tests/fuzzer/: fuzz.sh
tests/fuzzer/fuzz/: Cargo.toml
tests/instances/eth_runner/: Cargo.toml  README.md
tests/instances/eth_runner/src/: block.rs  ethproofs.rs  main.rs  single_run.rs
tests/instances/eth_runner/src/live_run/: mod.rs  rpc.rs
tests/rig/: Cargo.toml
tests/rig/src/: chain.rs  lib.rs  testing_utils.rs  utils.rs
zk_ee/: Cargo.toml
zk_ee/src/: execution_environment_type.rs  lib.rs
zk_ee/src/common_structs/: events_storage.rs  history_counter.rs  history_list.rs  logs_storage.rs  mod.rs  proof_data.rs  state_root_view.rs
zk_ee/src/memory/: mod.rs  stack_trait.rs
zk_ee/src/oracle/: mod.rs  query_ids.rs  simple_oracle_query.rs
zk_ee/src/reference_implementations/: mod.rs
zk_ee/src/storage_types/: mod.rs
zk_ee/src/system/: base_system_functions.rs  (+5 more)
zksync_os/: Cargo.toml  app.text  dump_bin.sh
zksync_os_runner/src/: run_transpiler.rs
(+153 files in other folders)
