[package]
name = "zksync_os_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

forward_system = { path = "../forward_system"}
oracle_provider = { path = "../oracle_provider" }
callable_oracles = { path = "../callable_oracles/" }
zksync_os_runner = { path = "../zksync_os_runner"}
risc_v_simulator = { workspace = true }
zk_ee = { path = "../zk_ee" }
crypto = { path = "../crypto" }
basic_system = { path = "../basic_system" }
evm_interpreter = { path = "../evm_interpreter" }
ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
alloy = { version = "=1", default-features = false, features = ["eip712", "consensus", "rpc-types", "signer-local", "dyn-abi", "network"] }
zksync_os_interface = { workspace = true }

[features]
# By default, use the risc_v_simulator with delegation (which is faster).
default = ["risc_v_simulator/delegation"]
