[package]
name = "eth_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rig = { path = "../../rig" }
zk_ee = { path = "../../../zk_ee" }
basic_system = { path = "../../../basic_system" }
forward_system = { path = "../../../forward_system" }
system_hooks = {path = "../../../system_hooks" }

serde = { workspace = true, features = ["derive"] }
ruint = { workspace = true, default-features = false }

alloy = { version = "1", features = ["rlp", "full", "ssz", "eips"] }
alloy-primitives = { version = "1", features = ["arbitrary"] }
alloy-rpc-types-eth = { version = "*", features = ["serde"] }
alloy-rpc-types-debug = { version = "*", default-features = false }
alloy-rlp = { version = "*" }

serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "=1.0.89"
hex = "*"
ureq = { version = "2", features = ["json"] }
sled = {version = "0.34" }
bincode = { version = "2", features = ["serde"] }
serde_with = "3.13.0"
csv = "1.3"
base64 = "0.21.7"


cli = {git = "https://github.com/matter-labs/zksync-airbender", branch = "mmzk_ethproofs", optional = true }
execution_utils = {git = "https://github.com/matter-labs/zksync-airbender", branch = "mmzk_ethproofs", optional = true }

[features]
simulate_witness_gen = ["rig/simulate_witness_gen"]
# default = []
# default = ["evm_replay"]
default = ["evm_replay", "pectra", "with_prover"]
risc_v_logs = []
evm_replay = ["rig/prevrandao", "rig/unlimited_native", "rig/disable_system_contracts", "rig/evm_refunds", "rig/evm-compatibility"]
pectra = ["rig/pectra"]
with_prover = ["cli/gpu", "execution_utils"]